--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "cf:push": "cf push"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "express": "^4.18.2",
-    "openai": "^3.3.0",
+    "openai": "^4.79.4",
     "pino": "^8.14.1",
     "dotenv": "^16.3.1"
   },
